[package]
name = "fr-pmx-control-router"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.3"
fr-pmx-config-lib = { path = "../fr-pmx-config-lib" }
fr-logging = { path = "../fr-logging" }

[build-dependencies]
tonic-build = "0.12.3"
